--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Leap Year Checker</title>
     <style>
         body{
+            width: 100%;
+            height: 100%;
             font-family: Arial, Helvetica, sans-serif;
             margin: 0;
             padding: 0;
